[gd_scene load_steps=6 format=3 uid="uid://cdba1p2ili4bh"]

[ext_resource type="PackedScene" uid="uid://c6qccuc6h1351" path="res://player.tscn" id="1_cduvk"]
[ext_resource type="Script" path="res://main.gd" id="1_ty4er"]
[ext_resource type="PackedScene" uid="uid://dtoaxlnnankev" path="res://mob.tscn" id="2_y4udu"]
[ext_resource type="PackedScene" uid="uid://naof7t0qfulw" path="res://HUD.tscn" id="4_j7go6"]

[sub_resource type="Curve2D" id="Curve2D_gdtwo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ty4er")
mob_scene = ExtResource("2_y4udu")

[node name="Player" parent="." instance=ExtResource("1_cduvk")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gdtwo")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_j7go6")]

[connection signal="start_game" from="HUD" to="." method="new_game"]
